# 360-data-athlete

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  entrypoint.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: coach-analyst.md  config-auditor.md  config-fixer.md  data-scientist.md  exercise-reviewer.md  mental-coach.md  physio-consultant.md  plan-validator.md  planner.md  research-analyst.md  specialist-complementary.md  specialist-endurance.md  specialist-ninja.md  sports-ortho-consultant.md  strava-publisher.md  video-analyst.md
app/: config.py
commands/: analyse.md  audit.md  muscleoverview.md  pull.md  research.md  strava.md  training.md  wellness.md
config.example/: README.md  athlete_preferences.md  athlete_static.md  athlete_status.md  balance_pool.json  competition_plan.md  equipment.md  exercise_checklist.md  exercise_log.md  exercise_muscle_mapping.json  exercise_progressions.md  injury_locks.json  muscle_db.md  recovery_protocol.md  training_paradigms.md  training_rules_endurance.md  training_rules_planner.md  training_rules_strength.md  zone_validation_protocol.md
docs/: architecture.md  hrv_dfa_workflow.md  muscleoverview.md  threat-model.md
prompts/: daily_planner.yaml  final_coach_analysis.yaml  first_feedback.yaml  specialist_complementary.yaml  specialist_endurance.yaml  specialist_ninja.yaml  sub_lap_summarizer.yaml
research/: README.md  achilles-rehab-phases.md  ballistic-hip-hinge-vs-eccentric-rdl-before-longrun.md  brick-running-intensity.md  (+49 more)
(+133 files in other folders)
